fix the horizontal scrolling issue

--- a/laptop.css
+++ b/laptop.css
@@ -8,7 +8,7 @@
     filter: brightness(50%);
     background-size: cover;
     background-repeat: no-repeat;
-    width:100vw;
+    width:100%;
     height: 50vh;
     display: flex;
     justify-content: center;
@@ -231,7 +231,7 @@
     }
 
     footer{
-        width: 100vw;
+        width: 100%;
         height: 20vh;
         padding: 2vw 0;
         padding-bottom: 7vw;
